# ai-crm-lead-automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
config/: scoring-policy.json
data/: automation_logs.json  leads.json  sample_messages.json
docs/: client-verification-report.md  local-technical-verification-report.md  portfolio-case-study.md  privacy-and-operations.md  scoring-evaluation.md  workflow-diagram.md
evaluations/: scoring-cases.json
src/: app.py  config.py  lead_ai.py  openai_provider.py  purge_data.py  seed_data.py  seed_demo.py  storage.py  test_workflow.py
tests/: __init__.py  test_app.py  test_config_and_startup.py  test_lead_ai.py  test_openai_provider.py  test_storage.py
tools/: build_portfolio_pdfs.py  check_project.py  evaluate_scoring.py
