[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-crm-lead-automation"
version = "1.0.0"
description = "A safe local reference implementation for structured inbound-lead triage"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Polina Bazhina" }]
dependencies = []

[tool.setuptools]
py-modules = []
